<resources>
    <string name="app_name">ARK_versiondos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_more">Acerca de</string>
    <string name="menu_Busqueda">Busqueda</string>
    <string name="menu_Mapa">Mapa</string>
    <string name="menu_Comparar">Comparar</string>
    <string name="menu_Galeria">Galeria</string>
    <string name="Bienvenido">BIENVENIDO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="Usuario">Usuario</string>
    <string name="Correo">Correo</string>
    <string name="Contrase_a">Contraseña</string>
    <string name="tel_fono">teléfono</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="estado">Estado</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="recordarme">Recordarme</string>
    <string name="correo">Correo</string>
    <string name="title_activity_maps2">Map</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="buscar">BUSCAR</string>
    <string name="more">More</string>
    <string name="simbrah">Simbrah</string>

    <string name="temperatura_maxima">Temperatura maxima:</string>
    <string name="periodo_de_gestaci_n">Periodo de gestación:</string>
    <string name="textview">TextView</string>
    <string name="calidad_de_leche">Calidad de leche:</string>

    <string name="especialidad">Especialidad:</string>
    <string name="peso_promedio">Peso promedio:</string>
    <string name="propiedades_de_la_leche">Propiedades de la leche:</string>
    <string name="temperatura_minima">Temperatura minima:</string>

    <string name="enfermedades_propensas">Enfermedades propensas:</string>

    <string name="litros_de_leche_al_a_o">Litros de leche al año:</string>
    <string name="temperamento">Temperamento:</string>

    <string name="longevidad">Longevidad:</string>
    <string name="raza">Raza:</string>
    <string name="tipo_de_cuerpo">Tipo de cuerpo:</string>
    <string name="crias_de_vida_productiva">Crias de vida productiva:</string>

    <string name="imagenanimal">ImagenAnimal</string>
    <string name="tvraza">tvRaza</string>
    <string name="tvlitros">tvLitros</string>
    <string name="tvpeso">tvPeso</string>
    <string name="tvcrias">tvCrias</string>
    <string name="tvtempmaxima">tvTempMaxima</string>
    <string name="tvlongevidad">tvLongevidad</string>
    <string name="tvtempminima">tvTempMinima</string>
    <string name="tvenfermedades">tvEnfermedades</string>
    <string name="tvcuerpo">tvCuerpo</string>
    <string name="tvtemperamento">tvTemperamento</string>
    <string name="tvespecialidad">tvEspecialidad</string>
    <string name="tvgestacion">tvGestacion</string>
    <string name="tvcantleche">tvCantLeche</string>
    <string name="tvpropsleche">tvPropsLeche</string>
    <string name="reset">RESET</string>
    <string name="usuario_fh">USUARIO</string>
    <string-array name="temps">
        <item>Temperatura</item>
        <item>Climas calido</item>
        <item>Climas topical</item>
        <item>Clima gelido</item>
    </string-array>
    <string-array name="esps">
        <item>Especialidad</item>
        <item>Lechera</item>
        <item>Carne</item>
    </string-array>
    <string name="title_activity_mapas">Map</string>
    <string name="animal">Animal</string>
    <string name="guardar">Guardar</string>
    <string name="informaci_n_del_usuario">Información del usuario</string>
    <string name="selecciona_el_animal">Selecciona el animal</string>
</resources>
