<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_busqueda"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_Busqueda"
            />
        <item
            android:id="@+id/nav_comparar"
            android:icon="@drawable/ic_compare"
            android:title="@string/menu_Comparar"
            />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_person_black"
            android:title="@string/menu_Mapa"
            />

    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_person_black"
                android:title="@string/menu_perfil"
                />
            <item
                android:id="@+id/nav_galeria"
                android:icon="@drawable/ic_image"
                android:title="@string/menu_Galeria"
                />
            <item
                android:id="@+id/nav_more"
                android:icon="@drawable/ic_more"
                android:title="@string/menu_more"
                />
        </menu>
    </item>

</menu>
