<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ark_versiondos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.ark_versiondos.ui.home.HomeFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/perfil_fragment" />
    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.ark_versiondos.ui.home.HomeFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/more_fragment" />

</navigation>