<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/piin"
    tools:context=".Login">

    <Button
        android:id="@+id/biniciars"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_margin="20dp"
        android:background="@drawable/fbotoni"
        android:onClick="Iniciar"
        android:text="@string/iniciar_sesi_n"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/brecuperar"
        android:layout_width="185dp"
        android:layout_height="16dp"
        android:layout_margin="20dp"
        android:background="@drawable/recuperar"
        android:onClick="Acceder_C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biniciars"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bregistrar"
        android:layout_width="243dp"
        android:layout_height="17dp"
        android:layout_margin="20dp"
        android:background="@drawable/registrar"
        android:onClick="Acceder_R"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brecuperar"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="319dp"
        android:layout_height="38dp"
        android:background="@drawable/ftextoi"
        android:drawableLeft="@drawable/dusuario"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/biniciars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="319dp"
        android:layout_height="38dp"
        android:background="@drawable/ftextoi"
        android:drawableLeft="@drawable/dcontrasena"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/biniciars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintVertical_bias="0.33999997" />

    <CheckBox
        android:id="@+id/recordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordarme"
        android:textColor="#686868"
        app:layout_constraintBottom_toTopOf="@+id/biniciars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="264dp"
        android:layout_height="20dp"
        android:background="@drawable/linea"
        app:layout_constraintBottom_toTopOf="@+id/bregistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brecuperar" />

</androidx.constraintlayout.widget.ConstraintLayout>